@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2007-10-30  Warren L. DeLano <warren@delsci.com>
+
+	* direct SDF output for single and multi-state objects
+	
 2007-10-29  Warren L. DeLano <warren@delsci.com>
 
 	* added workaround for writing PQR files with long coordinates
